--- a/ps2/Makefile.eeglobal
+++ b/ps2/Makefile.eeglobal
@@ -12,10 +12,10 @@
 EE_INCS := -I$(PS2SDK)/ee/include -I$(PS2SDK)/common/include -I. $(EE_INCS)
 
 # C compiler flags
-EE_CFLAGS := -D_EE -Os -G0 -Wall $(EE_CFLAGS)
+EE_CFLAGS := -D_EE -O6 -G0 -Wall $(EE_CFLAGS)
 
 # C++ compiler flags
-EE_CXXFLAGS := -D_EE -Os -G0 -Wall $(EE_CXXFLAGS)
+EE_CXXFLAGS := -D_EE -O6 -G0 -Wall $(EE_CXXFLAGS)
 
 # Linker flags
 EE_LDFLAGS := -L$(PS2SDK)/ee/lib $(EE_LDFLAGS)
