--- a/ps2/snes9x.cbp
+++ b/ps2/snes9x.cbp
@@ -383,14 +383,12 @@
 		<Unit filename="Makefile" />
 		<Unit filename="Makefile.eeglobal" />
 		<Unit filename="Makefile.pref" />
-		<Unit filename="needc.c">
-			<Option compilerVar="CC" />
-		</Unit>
-		<Unit filename="needcpp.cpp" />
 		<Unit filename="paths/paths.c">
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="paths/paths.h" />
+		<Unit filename="ps2_controls.h" />
+		<Unit filename="ps2_snes9x.cpp" />
 		<Unit filename="../reader.cpp" />
 		<Unit filename="../reader.h" />
 		<Unit filename="../sa1.cpp" />
