--- a/ps2/Makefile
+++ b/ps2/Makefile
@@ -1,17 +1,7 @@
 SUBDIRS =
 
-INTERFACE_OBJS = \
-    interface/src/config.o \
-    interface/src/gui.o \
-    interface/src/gzip.o \
-    interface/src/hdd.o \
-    interface/src/init.o \
-    interface/src/paths.o \
-    interface/src/tar.o
-
-INTERFACE_INCS = \
-    -Iinterface/include
-
+#CPU_SHUTDOWN=1
+#SYS_CONFIG_FILE=1
 #DEBUG=1
 #MOVIE_SUPPORT=1
 #JMA_SUPPORT=1
@@ -19,41 +9,26 @@ INTERFACE_INCS = \
 #LOGGER_SUPPORT=1
 #CONFFILE_SUPPORT=1
 #NETPLAY_SUPPORT=1
-
 HAVE_LIBPNG=1
 ZLIB=1
 UNZIP_SUPPORT=1
 SDD1_DECOMP=1
 
 SNES9X_FLAGS = -DHAVE_LIBPNG -DZLIB -DCORRECT_VRAM_READS -DSDD_DECOMP -DUNZIP_SUPPORT -fno-inline -ffast-math
-EE_BIN = snes9x.elf
-EE_CFLAGS = $(SNES9X_FLAGS)
-EE_CXXFLAGS = $(SNES9X_FLAGS) -fno-exceptions -fno-rtti
+SNES9X_INCS = -I.. -I../apu -I../unzip
 
-EE_INCS = $(INTERFACE_INCS) -I.. -I../apu -I../unzip -I$(PS2SDK)/ports/include
-EE_LDFLAGS = -L$(PS2SDK)/ports/lib
-
-EE_GFX_LIBS = -ldma -lpacket -lgraph -lfont -ldraw -limage
-EE_PAD_LIBS = -lmtap -lpadx
-EE_FILE_LIBS = -lfileXio -lmc
-EE_SYS_LIBS = -lpoweroff -lpatches -lmf -lc
-
-EE_LIBS = $(EE_GFX_LIBS) $(EE_PAD_LIBS) -lconfig -lpng -lz $(EE_FILE_LIBS) $(EE_SYS_LIBS)
-
-EE_OBJS = ps2_snes9x.o $(INTERFACE_OBJS)
-
-EE_OBJS += \
+SNES9X_OBJS = \
     ../fxinst.o \
     ../fxemu.o \
     ../fxdbg.o
 
 
-EE_OBJS += \
+SNES9X_OBJS += \
     ../c4.o \
     ../c4emu.o
 
 # APU
-EE_OBJS += \
+SNES9X_OBJS += \
     ../apu/apu.o \
     ../apu/SNES_SPC.o \
     ../apu/SNES_SPC_misc.o \
@@ -62,7 +37,7 @@ EE_OBJS += \
     ../apu/SPC_Filter.o
 
 # DSP
-EE_OBJS += \
+SNES9X_OBJS += \
     ../dsp.o \
     ../dsp1.o \
     ../dsp2.o \
@@ -70,7 +45,7 @@ EE_OBJS += \
     ../dsp4.o 
 
 # Base
-EE_OBJS += \
+SNES9X_OBJS += \
     ../spc7110.o \
     ../obc1.o \
     ../seta.o \
@@ -96,52 +71,52 @@ EE_OBJS += \
     ../screenshot.o \
 
 # ASMCPU Doesn't exist anymore.
-EE_OBJS += \
+SNES9X_OBJS += \
     ../cpuops.o \
     ../cpuexec.o \
     ../sa1cpu.o
 
-EE_OBJS += \
+SNES9X_OBJS += \
     ../cheats.o \
     ../cheats2.o
 
 # Zip support is nonconfigurable.
-EE_OBJS += \
+SNES9X_OBJS += \
     ../loadzip.o \
     ../unzip/unzip.o \
     ../unzip/ioapi.o \
     ../unzip/zip.o
 
 ifdef DEBUGGER
-EE_OBJS += ../debug.o
+SNES9X_OBJS += ../debug.o
 endif
 
 ifdef LOGGER_SUPPORT
-EE_OBJS += ../logger.o
+SNES9X_OBJS += ../logger.o
 endif
 
 ifdef CONFFILE_SUPPORT
-EE_OBJS += ../conffile.o
-EE_OBJS += ../snes9x.o
+SNES9X_OBJS += ../conffile.o
+SNES9X_OBJS += ../snes9x.o
 endif
 
 ifdef MOVIE_SUPPORT
-EE_OBJS += ../movie.o
+SNES9X_OBJS += ../movie.o
 endif
 
 ifdef SDD1_DECOMP
-EE_OBJS += ../sdd1emu.o
+SNES9X_OBJS += ../sdd1emu.o
 endif
 
 ifdef NETPLAY_SUPPORT
-EE_OBJS += \
+SNES9X_OBJS += \
     ../netplay.o \
     ../server.o
 endif
 
 ifdef JMA_SUPPORT
-EE_LDFLAGS = libjma.a
-EE_OBJS += \
+SNES9X_LDFLAGS = libjma.a
+SNES9X_OBJS += \
     ../jma/s9x-jma.o \
     ../jma/7zlzma.o \
     ../jma/crc32.o \
@@ -153,6 +128,34 @@ EE_OBJS += \
     ../jma/winout.o
 #EE_CXXFLAGS = -fexceptions
 endif
+
+INTERFACE_OBJS = \
+    interface/src/config.o \
+    interface/src/gui.o \
+    interface/src/gzip.o \
+    interface/src/hdd.o \
+    interface/src/init.o \
+    interface/src/paths.o \
+    interface/src/tar.o
+
+INTERFACE_INCS = \
+    -Iinterface/include
+
+EE_BIN = snes9x.elf
+
+EE_OBJS = ps2_snes9x.o $(INTERFACE_OBJS) $(SNES9X_OBJS)
+
+EE_CFLAGS = $(SNES9X_FLAGS)
+EE_CXXFLAGS = $(SNES9X_FLAGS) -fno-exceptions -fno-rtti
+
+EE_INCS = $(INTERFACE_INCS) $(SNES9X_INCS) -I$(PS2SDK)/ports/include
+EE_LDFLAGS = -L$(PS2SDK)/ports/lib
+
+EE_GFX_LIBS = -ldma -lpacket -lgraph -lfont -ldraw -limage
+EE_FILE_LIBS = -lfileXio
+EE_SYS_LIBS = -lmc -lmtap -lpadx -lpoweroff -lpatches -lmf -lc
+
+EE_LIBS = $(EE_GFX_LIBS) $(EE_PAD_LIBS) -lconfig -lpng -lz $(EE_FILE_LIBS) $(EE_SYS_LIBS)
 
 all: $(EE_BIN)
 
