Add optimized ppu code from Snes9xTYL, customized for 1.52

--- a/ps2/Makefile
+++ b/ps2/Makefile
@@ -15,7 +15,7 @@ UNZIP_SUPPORT=1
 SDD1_DECOMP=1
 
 PS2SDK_FLAGS = -DNEW_PADMAN -UPS2LINK -fshort-double -mhard-float -ffast-math -mno-check-zero-division
-SNES9X_FLAGS = $(PS2SDK_FLAGS) -DRIGHTSHIFT_IS_SAR -DDEBUG -DZLIB -DHAVE_LIBPNG -DCORRECT_VRAM_READS -DSDD1_DECOMP -DUNZIP_SUPPORT -DJMA_SUPPORT
+SNES9X_FLAGS = $(PS2SDK_FLAGS) -DRIGHTSHIFT_IS_SAR -DDEBUG -DZLIB -DHAVE_LIBPNG -DSDD1_DECOMP -DUNZIP_SUPPORT -DJMA_SUPPORT
 
 SNES9X_INCS = -I.. -I../apu -I../unzip
 
